Post and Get Comments function enabled. Comments Server mvp.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,5 +15,12 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
+
+    <form method="POST" action="/comment">
+      <textarea name="comment"></textarea>
+      <br/>
+      <button>Submit</button>
+    </form>
+
   </body>
 </html>
