--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,11 +10,11 @@
     <div id="content">
       <h1 class="main-page-title ">Meme Generator</h1>
     <!-- TODO: Replace "/hello" with actual links once the servlets are ready -->
-      <form action="/hello" method="POST" enctype="multipart/form-data">
+      <form action="/memes" method="POST" enctype="multipart/form-data">
         <label for="uploadImage" class="upload-button">Upload Meme</label>
         <input type="file" value="Upload Meme" id="uploadImage" name="image" class="hidden" onchange="form.submit()">
       </form>
-      <a href="/hello" class="no-underline">
+      <a href="/memes" class="no-underline">
         <p class="see-memes-button">See All Memes</p>
       </a>
     </div>
